[gd_scene load_steps=2 format=3 uid="uid://bad2gcfjo0vgt"]

[ext_resource type="Script" uid="uid://cq4ui2q71j4jx" path="res://hud.gd" id="1_ahhtf"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Verdades" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 25)
offset_right = 241.0
offset_bottom = 112.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="GameOverPanel" type="Panel" parent="."]
process_mode = 2
modulate = Color(1, 1, 1, 0.8627451)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -32.5
offset_right = 61.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/CenterContainer"]
layout_mode = 2

[node name="GameOverLabel" type="RichTextLabel" parent="GameOverPanel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Game Over"
fit_content = true

[node name="RestartButton" type="Button" parent="GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"
